# starks-collator

./: .gitignore  Cargo.lock.bak  Cargo.toml  README.md  genesis-state  genesis-state_2002  genesis-wasm
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/parachain-info/: Cargo.toml
pallets/parachain-info/src/: lib.rs
pallets/ping/: Cargo.toml
pallets/starks-verifier/: Cargo.toml
pallets/validator-set/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: currency.rs  lib.rs
primitives/starks/: Cargo.toml
rococo-runtime/: Cargo.toml
rococo-runtime/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
shell-runtime/: Cargo.toml
statemine-runtime/: Cargo.toml
statemint-common/: Cargo.toml
statemint-runtime/: Cargo.toml
statemint-runtime/src/: lib.rs
westmint-runtime/: Cargo.toml
