[package]
name = "acala-primitives"
version = "1.0.0"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
bstringify = {version = "0.1.2",default-features = false }
serde = { version = "1.0.101", optional = true,default-features = false, features = ["derive"] }
# serde = { version = "1.0.124", optional = true }
# codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.64" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	# "evm/std",
	# "evm/with-serde",
	# "chainbridge/std",
]
runtime-benchmarks = [
	# "chainbridge/runtime-benchmarks",
]
